# medInria-public

./: CMakeLists.txt  LICENSES_EXT.txt  RELEASE_NOTES.txt  doxygen.conf  settings.json
.github/workflows/: cmake-single-platform.yml  medInria-macOS.yml  musicardio-macos.yml
app/medInria/: CMakeLists.txt  medBrowserArea.cpp  medDataSourceManager.cpp  medHomepageArea.cpp  medMainWindow.cpp  medWorkspaceArea.cpp
app/medPluginGenerator/: medPluginGenerator.cpp
packaging/: CMakeLists.txt
packaging/apple/: ApplePackScript.cmake.in  ApplePackaging.cmake  mac_packager.sh.in  settings.json
packaging/linux/: LinuxPackaging.cmake
packaging/unix/: Launchers.cmake
packaging/windows/: WindowsPackaging.cmake  medInria-dev.bat.in  medInria.bat.in
src/: CMakeLists.txt
src-plugins/: CMakeLists.txt
src-plugins/diffeomorphicDemons/: CMakeLists.txt
src-plugins/iterativeClosestPoint/: CMakeLists.txt  vtkICPFilter.cxx  vtkICPFilter.h
src-plugins/itkDataDiffusionGradientList/: CMakeLists.txt
src-plugins/itkDataImage/: CMakeLists.txt
src-plugins/itkDataSHImage/: CMakeLists.txt  itkDataSHImagePlugin.cpp
src-plugins/itkDataTensorImage/: CMakeLists.txt
src-plugins/itkFilters/: CMakeLists.txt  itkFiltersToolBox.cpp
src-plugins/itkN4BiasCorrection/: CMakeLists.txt
src-plugins/manualRegistration/: CMakeLists.txt  manualRegistrationLandmark.cpp  manualRegistrationLandmark.h  manualRegistrationLandmarkController.cpp  manualRegistrationLandmarkController.h
src-plugins/medBinaryOperation/: CMakeLists.txt
src-plugins/medClut/: CMakeLists.txt
src-plugins/medMaskApplication/: CMakeLists.txt
src-plugins/medSegmentation/: CMakeLists.txt  medAnnotationInteractor.cpp  medAnnotationInteractor.h  msegAlgorithmPaintToolbox.cpp  msegAlgorithmPaintToolbox.h  msegPlugin.cpp
src-plugins/medVtkFibersData/: CMakeLists.txt  vtkFiberDataSet.cxx  vtkFiberDataSet.h
src/layers/: CMakeLists.txt
src/vtkDataMesh/: CMakeLists.txt  vtkMetaDataSet.cxx  vtkMetaDataSet.h  vtkMetaDataSetSequence.cxx  vtkMetaVolumeMesh.h
src/vtkDataMesh/datas/: vtkDataMesh.cpp
src/vtkDataMesh/interactors/: vtkDataMesh4DInteractor.cpp  vtkDataMeshInteractor.cpp  vtkDataMeshInteractor.h
src/vtkDataMesh/readers/: vtkDataManagerReader.h  vtkDataMeshReader.cpp  vtkDataMeshReaderBase.cpp
src/vtkDataMesh/writers/: vtkDataManagerWriter.cxx  vtkDataMesh4DWriter.cpp
superbuild/: CMakeLists.txt  ConfigureExternalProjects.cmake
(+500 files in other folders)
